# midnight-notes

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  README.md
.cargo/: config.toml
.githooks/: README.md  install.sh  pre-commit
.github/workflows/: ci.yml
docs/: scaffold-prompt.md
docs/Design/: main-workspace.html  search-smart-views.html  settings.html  vault-lock.html
plugins/example-plugin/: Cargo.toml
plugins/example-plugin/src/: lib.rs
src/: README.md  Test.md  lib.rs  main.rs
src/core/: README.md  Test.md  backlinks.rs  export.rs  history.rs  markdown.rs  mod.rs  note.rs  search.rs  seeder.rs  tag.rs  watcher.rs
src/core/plugin/: README.md  Test.md  api.rs  host.rs  mod.rs
src/crypto/: README.md  Test.md  cipher.rs  keychain.rs  mod.rs
src/storage/: README.md  Test.md  attachments.rs  database.rs  migrations.rs  mod.rs  models.rs
src/ui/: README.md  Test.md  app.rs  mod.rs  settings.rs  smart_view.rs  theme.rs  vault_lock.rs  viewer.rs  workspace.rs
src/ui/editor/: README.md  Test.md  code.rs  format_menu.rs  kanban.rs  mod.rs  prose.rs  richtext.rs  slash.rs  spreadsheet.rs  vim.rs
src/ui/sidebar/: README.md  Test.md  backlinks.rs  calendar.rs  mod.rs  smart_views.rs  tag_tree.rs
styles/: app.css  dark.css  index.html  light.css  midnight.css
tests/: README.md  Test.md  integration.rs
